--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,35 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--foreground-rgb));
+	/* background-color: #494949;
+	background-image: linear-gradient(326deg, #494949 0%, #cccccc 74%); */
+	background:  url("../assets/lines.png") no-repeat center;
+  background-attachment: fixed;
+  background-size: auto 120%;
+  /* background-size: auto 100%; */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: revert;
+	font-weight: revert;
 }
